add new content tech/nmcli.md

--- a/public/tech/hugo-advanced/index.html
+++ b/public/tech/hugo-advanced/index.html
@@ -1986,7 +1986,7 @@ Untuk menampilkan fitur menu <em>Search</em> seperti gambar di atas setidaknya a
           ></div></div
       ></a>
     </div>
-  </blockquote><script async src="//www.instagram.com/embed.js"></script></p>
+  </blockquote><script async src="https://www.instagram.com/embed.js"></script></p>
 
 
 <h4 class="relative group">Youtube 
