add new content chess/pop-tactics5 (on-going)

--- a/public/tech/index.html
+++ b/public/tech/index.html
@@ -2343,7 +2343,7 @@
 
         
         <div class="font-bold text-xl text-neutral-800 decoration-primary-500 hover:underline hover:underline-offset-2 dark:text-neutral"
-          href="/tech/mugshot/">Mugshot to Change Your User Photo Profile</div>
+          href="/tech/mugshot/">Mugshot to Change Your User Profile Photo</div>
         
 
         <div class="text-sm text-neutral-500 dark:text-neutral-400">
