add cover to chess/pop-tactics.md & modify chess/intro.md summary

--- a/public/chess/intro/index.html
+++ b/public/chess/intro/index.html
@@ -11,7 +11,7 @@
   <title>Introduction to Chess ♟️ &middot; My Awesome Site</title>
   <meta name="title" content="Introduction to Chess ♟️ &middot; My Awesome Site" />
   
-  <meta name="description" content="This article shares about (short) history, pieces, notation, and other things regarding Intro to Chess." />
+  <meta name="description" content="This article shares (short) history, pieces, notation, and other things regarding Intro to Chess." />
   <meta name="keywords" content="chess, intro, " />
   
   
@@ -70,7 +70,7 @@
   <meta property="og:url" content="http://localhost:1313/chess/intro/">
   <meta property="og:site_name" content="My Awesome Site">
   <meta property="og:title" content="Introduction to Chess ♟️">
-  <meta property="og:description" content="This article shares about (short) history, pieces, notation, and other things regarding Intro to Chess.">
+  <meta property="og:description" content="This article shares (short) history, pieces, notation, and other things regarding Intro to Chess.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="article:section" content="chess">
@@ -84,7 +84,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/chess/intro/featured.png">
   <meta name="twitter:title" content="Introduction to Chess ♟️">
-  <meta name="twitter:description" content="This article shares about (short) history, pieces, notation, and other things regarding Intro to Chess.">
+  <meta name="twitter:description" content="This article shares (short) history, pieces, notation, and other things regarding Intro to Chess.">
 
   
   <script type="application/ld+json">
@@ -95,7 +95,7 @@
     "name": "Introduction to Chess ♟️",
     "headline": "Introduction to Chess ♟️",
     
-    "abstract": "This article shares about (short) history, pieces, notation, and other things regarding Intro to Chess.",
+    "abstract": "This article shares (short) history, pieces, notation, and other things regarding Intro to Chess.",
     "inLanguage": "en",
     "url" : "http:\/\/localhost:1313\/chess\/intro\/",
     "author" : {
