--- a/public/chess/pop-tactics5/index.html
+++ b/public/chess/pop-tactics5/index.html
@@ -82,13 +82,15 @@
     <meta property="article:tag" content="Trapped Piece">
     <meta property="article:tag" content="Simplification">
     <meta property="article:tag" content="Zugzwang">
+    <meta property="og:image" content="http://localhost:1313/chess/pop-tactics5/featured.png">
       <meta property="og:see_also" content="http://localhost:1313/chess/pop-tactics4/">
       <meta property="og:see_also" content="http://localhost:1313/chess/pop-tactics3/">
       <meta property="og:see_also" content="http://localhost:1313/chess/pop-tactics2/">
       <meta property="og:see_also" content="http://localhost:1313/chess/pop-tactics/">
 
   
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="http://localhost:1313/chess/pop-tactics5/featured.png">
   <meta name="twitter:title" content="Chess Tactics: Trapped Piece, Simplification, Zugzwang">
   <meta name="twitter:description" content="This article shares about 3 popular tactics in chess, which are Trapped Piece, Simplification, Zugzwang.">
 
@@ -718,12 +720,6 @@
   
   
   
- 
-  
-   
-  
- 
-
 
 
 <div id="hero" class="h-[150px] md:h-[200px]"></div>
@@ -732,7 +728,7 @@
 
     
     <div class="fixed inset-x-0 top-0 h-[800px] single_hero_background nozoom"
-    style="background-image:url(/img/blue-aqua_hu_6efeced160f7cdc7.jpg);">
+    style="background-image:url(/chess/pop-tactics5/featured_hu_2a951bb61ab6c9b2.png);">
     
 
 
