--- a/public/chess/pop-tactics/index.html
+++ b/public/chess/pop-tactics/index.html
@@ -2009,7 +2009,7 @@ Teknik <em><strong>pinning</strong></em> ini hanya dapat dilakukan oleh perwira 
 
         
         <div class="py-1 prose dark:prose-invert">
-          This article shares about (short) history, pieces, notation, and other things regarding Intro to Chess.
+          This article shares (short) history, pieces, notation, and other things regarding Intro to Chess.
         </div>
         
       </div>
