--- a/public/chess/pop-tactics3/index.html
+++ b/public/chess/pop-tactics3/index.html
@@ -2289,7 +2289,7 @@ Pada dasarnya, taktik catur adalah gerakan / langkah (atau serangkaian langkah) 
 
         
         <div class="py-1 prose dark:prose-invert">
-          This article shares about (short) history, pieces, notation, and other things regarding Intro to Chess.
+          This article shares (short) history, pieces, notation, and other things regarding Intro to Chess.
         </div>
         
       </div>
