--- a/public/chess/pop-tactics2/index.html
+++ b/public/chess/pop-tactics2/index.html
@@ -2144,7 +2144,7 @@ Saya sudah pernah membahas taktik <em><strong>fork</strong></em> atau garpuan di
 
         
         <div class="py-1 prose dark:prose-invert">
-          This article shares about (short) history, pieces, notation, and other things regarding Intro to Chess.
+          This article shares (short) history, pieces, notation, and other things regarding Intro to Chess.
         </div>
         
       </div>
