--- a/public/life/miesedaprawit/index.html
+++ b/public/life/miesedaprawit/index.html
@@ -1862,7 +1862,7 @@ Artikel ulasan ini tidak disponsori siapapun dan tidak dalam rangka mendukung si
 
         
         <div class="py-1 prose dark:prose-invert">
-          This article shares about (short) history, pieces, notation, and other things regarding Intro to Chess.
+          This article shares (short) history, pieces, notation, and other things regarding Intro to Chess.
         </div>
         
       </div>
