--- a/public/tech/mas/index.html
+++ b/public/tech/mas/index.html
@@ -81,9 +81,11 @@
     <meta property="article:tag" content="Script">
     <meta property="article:tag" content="Powershell">
     <meta property="article:tag" content="Seb">
+    <meta property="og:image" content="http://localhost:1313/tech/mas/featured.png">
 
   
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="http://localhost:1313/tech/mas/featured.png">
   <meta name="twitter:title" content="Windows License Activation with MAS">
   <meta name="twitter:description" content="A simple way to activate your Windows license using Microsoft Activation Script (MAS).">
 
@@ -713,12 +715,6 @@
   
   
   
- 
-  
-   
-  
- 
-
 
 
 <div id="hero" class="h-[150px] md:h-[200px]"></div>
@@ -727,7 +723,7 @@
 
     
     <div class="fixed inset-x-0 top-0 h-[800px] single_hero_background nozoom"
-    style="background-image:url(/img/blue-aqua_hu_6efeced160f7cdc7.jpg);">
+    style="background-image:url(/tech/mas/featured_hu_72c645f0819df557.png);">
     
 
 
