add new wallpaper gallery/wall

--- a/public/gallery/wall/index.html
+++ b/public/gallery/wall/index.html
@@ -813,6 +813,8 @@
   <img src="/wall/wall4.png" class="grid-w50 md:grid-w33 xl:grid-w25" />
   <img src="/wall/wall5.png" class="grid-w50 md:grid-w33 xl:grid-w25" />
   <img src="/wall/wall6.png" class="grid-w50 md:grid-w33 xl:grid-w25" />
+  <img src="/wall/wall7.png" class="grid-w50 md:grid-w33 xl:grid-w25" />
+  <img src="/wall/wall8.png" class="grid-w50 md:grid-w33 xl:grid-w25" />
 
 </div>
 
