--- a/public/tech/inteldriverinstall/index.html
+++ b/public/tech/inteldriverinstall/index.html
@@ -80,9 +80,11 @@
     <meta property="article:tag" content="Windows">
     <meta property="article:tag" content="Powershell">
     <meta property="article:tag" content="Microsoft Store">
+    <meta property="og:image" content="http://localhost:1313/tech/inteldriverinstall/featured.png">
 
   
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="http://localhost:1313/tech/inteldriverinstall/featured.png">
   <meta name="twitter:title" content="Fixing Windows Brightness Problem">
 
   
@@ -711,12 +713,6 @@
   
   
   
- 
-  
-   
-  
- 
-
 
 
 <div id="hero" class="h-[150px] md:h-[200px]"></div>
@@ -725,7 +721,7 @@
 
     
     <div class="fixed inset-x-0 top-0 h-[800px] single_hero_background nozoom"
-    style="background-image:url(/img/blue-aqua_hu_6efeced160f7cdc7.jpg);">
+    style="background-image:url(/tech/inteldriverinstall/featured_hu_28d48687c75f5892.png);">
     
 
 
