--- a/public/tech/mas/index.html
+++ b/public/tech/mas/index.html
@@ -2220,7 +2220,7 @@ Press [2] Ohook for Office activation.</p>
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >Fixing Windows Brightness Problem by Installing Proper Display Driver</span
+                  >Fixing Windows Brightness Problem</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
