modify wall.md's summary

--- a/public/gallery/index.html
+++ b/public/gallery/index.html
@@ -904,7 +904,7 @@
 
         
         <div class="py-1 prose dark:prose-invert">
-          My personal wallpapers that I used to or have used in my Laptop.
+          (My personal) wallpapers.
         </div>
         
       </div>
