--- a/public/gallery/wall/index.html
+++ b/public/gallery/wall/index.html
@@ -11,7 +11,7 @@
   <title>Wallpaper &middot; My Awesome Site</title>
   <meta name="title" content="Wallpaper &middot; My Awesome Site" />
   
-  <meta name="description" content="My personal wallpapers that I used to or have used in my Laptop." />
+  <meta name="description" content="(My personal) wallpapers." />
   <meta name="keywords" content="wallpaper, " />
   
   
@@ -70,7 +70,7 @@
   <meta property="og:url" content="http://localhost:1313/gallery/wall/">
   <meta property="og:site_name" content="My Awesome Site">
   <meta property="og:title" content="Wallpaper">
-  <meta property="og:description" content="My personal wallpapers that I used to or have used in my Laptop.">
+  <meta property="og:description" content="(My personal) wallpapers.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="article:section" content="gallery">
@@ -81,7 +81,7 @@
   
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Wallpaper">
-  <meta name="twitter:description" content="My personal wallpapers that I used to or have used in my Laptop.">
+  <meta name="twitter:description" content="(My personal) wallpapers.">
 
   
   <script type="application/ld+json">
@@ -92,7 +92,7 @@
     "name": "Wallpaper",
     "headline": "Wallpaper",
     
-    "abstract": "My personal wallpapers that I used to or have used in my Laptop.",
+    "abstract": "(My personal) wallpapers.",
     "inLanguage": "en",
     "url" : "http:\/\/localhost:1313\/gallery\/wall\/",
     "author" : {
@@ -755,7 +755,7 @@
       
 <p><details >
   <summary markdown="span"><strong>About This Page</strong></summary>
-  <p>These are my personal wallpapers that I used to or have used in my Laptop. They mostly are crawled from famous wallpaper websites such as</p>
+  <p>These are my personal wallpapers that I&rsquo;ve used to or currently use in my Laptop. They mostly are crawled from famous wallpaper websites such as</p>
 <ol>
 <li><a href="https://wallhaven.cc/" target="_blank"><strong>wallhaven</strong></a>,</li>
 <li><a href="https://www.wallpaperflare.com/" target="_blank"><strong>wallpaperflare</strong></a>,</li>
