--- a/public/index.html
+++ b/public/index.html
@@ -846,13 +846,14 @@
                         
                     </div>
                     <section class="prose dark:prose-invert"><p>Hi, there! 😊<br>
-Welcome to <b> &ldquo;My Awesome Site&rdquo;! </b></p>
+Welcome to <b> &ldquo;My Awesome Site&rdquo;! </b>;<br>
+This is <b>copyleft</b>-ish site, btw.</p>
 <h4 id="typeit-6fb22d3943ec7794c447a8e7c1bb77a4"></h4>
 
 <script>
     document.addEventListener("DOMContentLoaded", function () {
       new TypeIt("#typeit-6fb22d3943ec7794c447a8e7c1bb77a4", {
-        strings: ["\r"," Frankly, I am not a \u003cmark\u003e {hacker, programmer}\u003c/mark\u003e.  \r"," I am just an ordinary \u003cb\u003e\u003ci\u003e blogger who love \u003cmark\u003e linux\u003c/mark\u003e.\u003c/i\u003e\u003c/b\u003e\r",""],
+        strings: ["\r"," Frankly, I am not a \u003cmark\u003e {hacker, programmer}\u003c/mark\u003e.  \r"," I am just an ordinary \u003cb\u003e\u003ci\u003e blogger who love \u003cmark\u003e linux\u003c/mark\u003e.\u003c/i\u003e\u003c/b\u003e   \r",""],
         speed:  100 ,
         lifeLike:  true ,
         startDelay:  0 ,
