edit tech/beatprints.md (add spotify embed link)

--- a/public/index.html
+++ b/public/index.html
@@ -914,7 +914,7 @@ This is <b>copyleft</b>-ish site, btw.</p>
 
         
         <div class="font-bold text-xl text-neutral-800 decoration-primary-500 hover:underline hover:underline-offset-2 dark:text-neutral"
-          href="/tech/beatprints/">Beatprints: Your Favorite Spotify Poster</div>
+          href="/tech/beatprints/">BeatPrints: Your Favorite Spotify Poster</div>
         
 
         <div class="text-sm text-neutral-500 dark:text-neutral-400">
