--- a/public/tech/index.html
+++ b/public/tech/index.html
@@ -827,7 +827,7 @@
 
         
         <div class="font-bold text-xl text-neutral-800 decoration-primary-500 hover:underline hover:underline-offset-2 dark:text-neutral"
-          href="/tech/beatprints/">Beatprints: Your Favorite Spotify Poster</div>
+          href="/tech/beatprints/">BeatPrints: Your Favorite Spotify Poster</div>
         
 
         <div class="text-sm text-neutral-500 dark:text-neutral-400">
