add new content chess/checkmate1.md

--- a/public/chess/pop-tactics3/index.html
+++ b/public/chess/pop-tactics3/index.html
@@ -1345,7 +1345,7 @@
 
         <div class="article-content max-w-prose mb-20">
           <blockquote>
-<p>Seorang master catur Jerman kelahiran tahun 1868, Richard Teichmann pernah berkata, &ldquo;<em><strong>chess is 99% tactics</strong></em>&rdquo;.</p></blockquote>
+<p>Seorang master catur Jerman kelahiran tahun 1868, <a href="https://chesspuzzle.net/Player/Richard_Teichmann" target="_blank">Richard Teichmann</a> pernah berkata, &ldquo;<em><strong>chess is 99% tactics</strong></em>&rdquo;.</p></blockquote>
 
 
 <h2 class="relative group">What is Chess Tactics? 
