edit summary of checkmate1.md & checkmate2.md

--- a/public/chess/checkmate1/index.html
+++ b/public/chess/checkmate1/index.html
@@ -11,7 +11,7 @@
   <title>Checkmate Pattern: Arabian Mate, Anastasia&#39;s Mate, Back Rank Mate, Boden&#39;s Mate &middot; My Awesome Site</title>
   <meta name="title" content="Checkmate Pattern: Arabian Mate, Anastasia&#39;s Mate, Back Rank Mate, Boden&#39;s Mate &middot; My Awesome Site" />
   
-  <meta name="description" content="In this article, I would like to share 4 popular checkmate patterns, which are Arabian Mate, Anastasias Mate, Back Rank Mate, and Bodens Mate" />
+  <meta name="description" content="In this article, I would like to share 4 popular checkmate patterns, which are Arabian Mate, Anastasias Mate, Back Rank Mate, and Bodens Mate." />
   <meta name="keywords" content="chess, intro, checkmate, pattern, arabian mate, anastasia&#39;s mate, back rank mate, boden&#39;s mate, " />
   
   
@@ -70,7 +70,7 @@
   <meta property="og:url" content="http://localhost:1313/chess/checkmate1/">
   <meta property="og:site_name" content="My Awesome Site">
   <meta property="og:title" content="Checkmate Pattern: Arabian Mate, Anastasia&#39;s Mate, Back Rank Mate, Boden&#39;s Mate">
-  <meta property="og:description" content="In this article, I would like to share 4 popular checkmate patterns, which are Arabian Mate, Anastasias Mate, Back Rank Mate, and Bodens Mate">
+  <meta property="og:description" content="In this article, I would like to share 4 popular checkmate patterns, which are Arabian Mate, Anastasias Mate, Back Rank Mate, and Bodens Mate.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="article:section" content="chess">
@@ -89,7 +89,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/chess/checkmate1/featured.png">
   <meta name="twitter:title" content="Checkmate Pattern: Arabian Mate, Anastasia&#39;s Mate, Back Rank Mate, Boden&#39;s Mate">
-  <meta name="twitter:description" content="In this article, I would like to share 4 popular checkmate patterns, which are Arabian Mate, Anastasias Mate, Back Rank Mate, and Bodens Mate">
+  <meta name="twitter:description" content="In this article, I would like to share 4 popular checkmate patterns, which are Arabian Mate, Anastasias Mate, Back Rank Mate, and Bodens Mate.">
 
   
   <script type="application/ld+json">
@@ -100,7 +100,7 @@
     "name": "Checkmate Pattern: Arabian Mate, Anastasia\u0027s Mate, Back Rank Mate, Boden\u0027s Mate",
     "headline": "Checkmate Pattern: Arabian Mate, Anastasia\u0027s Mate, Back Rank Mate, Boden\u0027s Mate",
     
-    "abstract": "In this article, I would like to share 4 popular checkmate patterns, which are Arabian Mate, Anastasias Mate, Back Rank Mate, and Bodens Mate",
+    "abstract": "In this article, I would like to share 4 popular checkmate patterns, which are Arabian Mate, Anastasias Mate, Back Rank Mate, and Bodens Mate.",
     "inLanguage": "en",
     "url" : "http:\/\/localhost:1313\/chess\/checkmate1\/",
     "author" : {
