add new content tech/starship.md

--- a/public/tech/mas/index.html
+++ b/public/tech/mas/index.html
@@ -2219,7 +2219,7 @@ Press [2] Ohook for Office activation.</p>
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >The Utilization of 'nmcli'</span
+                  >The Utilization of 'nmcli' for Managing Wifi Network</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
