--- a/public/tech/changedns/index.html
+++ b/public/tech/changedns/index.html
@@ -2301,7 +2301,7 @@ Harap digunakan dengan sebaik-baiknya ya! 😊</p>
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >The Utilization of 'nmcli'</span
+                  >The Utilization of 'nmcli' for Managing Wifi Network</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
