--- a/public/tech/pgreppkill/index.html
+++ b/public/tech/pgreppkill/index.html
@@ -1786,7 +1786,7 @@
 
         
         <div class="font-bold text-xl text-neutral-800 decoration-primary-500 hover:underline hover:underline-offset-2 dark:text-neutral"
-          href="/tech/nmcli/">The Utilization of 'nmcli'</div>
+          href="/tech/nmcli/">The Utilization of 'nmcli' for Managing Wifi Network</div>
         
 
         <div class="text-sm text-neutral-500 dark:text-neutral-400">
