--- a/public/tech/tty/index.html
+++ b/public/tech/tty/index.html
@@ -1848,10 +1848,10 @@ Gimana? Keren kan login dengan TTY? Xixixixi</p>
   
   
   
-  <span style="margin-top:0.5rem" class="mr-2" onclick="window.open(&#34;/categories/linux/&#34;,'_self');return false;">
+  <span style="margin-top:0.5rem" class="mr-2" onclick="window.open(&#34;/categories/tools/&#34;,'_self');return false;">
     <span class="flex" style="cursor: pointer;">
   <span class="rounded-md border border-primary-400 px-1 py-[1px] text-xs font-normal text-primary-700 dark:border-primary-600 dark:text-primary-400">
-    Linux
+    Tools
   </span>
 </span>
   </span>
@@ -1863,6 +1863,14 @@ Gimana? Keren kan login dengan TTY? Xixixixi</p>
   
   
   
+  
+  <span style="margin-top:0.5rem" class="mr-2" onclick="window.open(&#34;/tags/tools/&#34;,'_self');return false;">
+    <span class="flex" style="cursor: pointer;">
+  <span class="rounded-md border border-primary-400 px-1 py-[1px] text-xs font-normal text-primary-700 dark:border-primary-600 dark:text-primary-400">
+    Tools
+  </span>
+</span>
+  </span>
   
   <span style="margin-top:0.5rem" class="mr-2" onclick="window.open(&#34;/tags/cool/&#34;,'_self');return false;">
     <span class="flex" style="cursor: pointer;">
