--- a/public/index.html
+++ b/public/index.html
@@ -1059,7 +1059,7 @@ This is <b>copyleft</b>-ish site, btw.</p>
 
         
         <div class="py-1 prose dark:prose-invert">
-          Do you get bored of your common shell prompt? Let&rsquo;s make it up with Starship!
+          Do you get bored of your default shell prompt? Let&rsquo;s make it up with Starship!
         </div>
         
       </div>
