--- a/public/tech/index.html
+++ b/public/tech/index.html
@@ -972,7 +972,7 @@
 
         
         <div class="py-1 prose dark:prose-invert">
-          Do you get bored of your common shell prompt? Let&rsquo;s make it up with Starship!
+          Do you get bored of your default shell prompt? Let&rsquo;s make it up with Starship!
         </div>
         
       </div>
