--- a/public/tech/starship/index.html
+++ b/public/tech/starship/index.html
@@ -11,7 +11,7 @@
   <title>Starship: The Elegant yet Easy Way to Beautify Your Terminal Shell Prompt &middot; My Awesome Site</title>
   <meta name="title" content="Starship: The Elegant yet Easy Way to Beautify Your Terminal Shell Prompt &middot; My Awesome Site" />
   
-  <meta name="description" content="Do you get bored of your common shell prompt? Let&#39;s make it up with Starship!" />
+  <meta name="description" content="Do you get bored of your default shell prompt? Let&#39;s make it up with Starship!" />
   <meta name="keywords" content="starship, shell, prompt, terminal, bash, zsh, fish, " />
   
   
@@ -70,7 +70,7 @@
   <meta property="og:url" content="http://localhost:1313/tech/starship/">
   <meta property="og:site_name" content="My Awesome Site">
   <meta property="og:title" content="Starship: The Elegant yet Easy Way to Beautify Your Terminal Shell Prompt">
-  <meta property="og:description" content="Do you get bored of your common shell prompt? Let’s make it up with Starship!">
+  <meta property="og:description" content="Do you get bored of your default shell prompt? Let’s make it up with Starship!">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="article:section" content="tech">
@@ -88,7 +88,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/tech/starship/featured.png">
   <meta name="twitter:title" content="Starship: The Elegant yet Easy Way to Beautify Your Terminal Shell Prompt">
-  <meta name="twitter:description" content="Do you get bored of your common shell prompt? Let’s make it up with Starship!">
+  <meta name="twitter:description" content="Do you get bored of your default shell prompt? Let’s make it up with Starship!">
 
   
   <script type="application/ld+json">
@@ -99,7 +99,7 @@
     "name": "Starship: The Elegant yet Easy Way to Beautify Your Terminal Shell Prompt",
     "headline": "Starship: The Elegant yet Easy Way to Beautify Your Terminal Shell Prompt",
     
-    "abstract": "Do you get bored of your common shell prompt? Let\u0026rsquo;s make it up with Starship!",
+    "abstract": "Do you get bored of your default shell prompt? Let\u0026rsquo;s make it up with Starship!",
     "inLanguage": "en",
     "url" : "http:\/\/localhost:1313\/tech\/starship\/",
     "author" : {
