modify 2 tech/blowfish.md

--- a/public/tech/hyprland/index.html
+++ b/public/tech/hyprland/index.html
@@ -3056,7 +3056,7 @@ Caranya mudah, kita hanya perlu mengganti baris berikut di konfigurasi Hyprland 
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >Blowfish</span
+                  >Blowfish: Another Special, Modern, and Feature-Rich Hugo's Theme</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
