add waline tutorial to Hugo-Advanced.md

--- a/public/chess/pop-tactics3/index.html
+++ b/public/chess/pop-tactics3/index.html
@@ -2465,6 +2465,11 @@ Pada dasarnya, taktik catur adalah gerakan / langkah (atau serangkaian langkah) 
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2477,12 +2482,10 @@ Pada dasarnya, taktik catur adalah gerakan / langkah (atau serangkaian langkah) 
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
