--- a/public/search/index.html
+++ b/public/search/index.html
@@ -1526,6 +1526,11 @@ keys: [&ldquo;title&rdquo;, &ldquo;permalink&rdquo;, &ldquo;summary&rdquo;, &ldq
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -1538,12 +1543,10 @@ keys: [&ldquo;title&rdquo;, &ldquo;permalink&rdquo;, &ldquo;summary&rdquo;, &ldq
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
