--- a/public/tech/blowfish/index.html
+++ b/public/tech/blowfish/index.html
@@ -2649,6 +2649,11 @@ Semua referensi pada artikel ini merujuk pada blog dan github resmi <strong>blow
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2661,12 +2666,10 @@ Semua referensi pada artikel ini merujuk pada blog dan github resmi <strong>blow
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
