--- a/public/tech/bluetoothctl/index.html
+++ b/public/tech/bluetoothctl/index.html
@@ -2634,6 +2634,11 @@ Mengapa saya (dan mungkin teman-teman pengguna Linux serta para professional Lin
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2646,12 +2651,10 @@ Mengapa saya (dan mungkin teman-teman pengguna Linux serta para professional Lin
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
