--- a/public/tech/cooltools/index.html
+++ b/public/tech/cooltools/index.html
@@ -2327,6 +2327,11 @@ Untuk mengganti warnanya, kita bisa menekan huruf <strong><code>f</code></strong
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2339,12 +2344,10 @@ Untuk mengganti warnanya, kita bisa menekan huruf <strong><code>f</code></strong
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
