--- a/public/tech/hugo-to-github/index.html
+++ b/public/tech/hugo-to-github/index.html
@@ -2216,6 +2216,11 @@ Di Tab &ldquo;Repository&rdquo; -&gt; Klik &ldquo;<strong>New</strong>&rdquo;.
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2228,12 +2233,10 @@ Di Tab &ldquo;Repository&rdquo; -&gt; Klik &ldquo;<strong>New</strong>&rdquo;.
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
