--- a/public/tech/lazyvim/index.html
+++ b/public/tech/lazyvim/index.html
@@ -2281,6 +2281,11 @@ Proses instalasi ini merujuk pada pentunjuk resmi lazyvim di repo github-nya: <a
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2293,12 +2298,10 @@ Proses instalasi ini merujuk pada pentunjuk resmi lazyvim di repo github-nya: <a
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
