--- a/public/tech/ngrok/index.html
+++ b/public/tech/ngrok/index.html
@@ -2410,6 +2410,11 @@ Jangan sembarangan mengekspos layanan penting seperti SSH ke sembarang jaringan 
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2422,12 +2427,10 @@ Jangan sembarangan mengekspos layanan penting seperti SSH ke sembarang jaringan 
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
