--- a/public/tech/onionshare/index.html
+++ b/public/tech/onionshare/index.html
@@ -2366,6 +2366,11 @@ lebih dari satu orang kalau kita ingin chat tersebut ramai orang berdiskusi.
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2378,12 +2383,10 @@ lebih dari satu orang kalau kita ingin chat tersebut ramai orang berdiskusi.
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
