--- a/public/tech/openvpn-server/index.html
+++ b/public/tech/openvpn-server/index.html
@@ -2036,6 +2036,11 @@ Select an option [1-2]: 1</li>
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2048,12 +2053,10 @@ Select an option [1-2]: 1</li>
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
