--- a/public/tech/rice/index.html
+++ b/public/tech/rice/index.html
@@ -2752,6 +2752,11 @@ dapat berada tepat di bawah window bagian dalam terminal. Kita bisa mengubahnya 
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2764,12 +2769,10 @@ dapat berada tepat di bawah window bagian dalam terminal. Kita bisa mengubahnya 
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
