--- a/public/tech/rofi/index.html
+++ b/public/tech/rofi/index.html
@@ -2613,6 +2613,11 @@ semestina (<em><strong>re</strong>:error</em>).
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2625,12 +2630,10 @@ semestina (<em><strong>re</strong>:error</em>).
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
