--- a/public/tech/rsync/index.html
+++ b/public/tech/rsync/index.html
@@ -2169,6 +2169,11 @@ Kalau masih bingung atau mau <em>explore</em> lebih jauh tentang <strong><code>r
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2181,12 +2186,10 @@ Kalau masih bingung atau mau <em>explore</em> lebih jauh tentang <strong><code>r
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
