--- a/public/tech/sqlbasic/index.html
+++ b/public/tech/sqlbasic/index.html
@@ -2904,6 +2904,11 @@ Perhatikan bahwa saya tidak memasukkan nomor urut di kolom id, tapi nomor langsu
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2916,12 +2921,10 @@ Perhatikan bahwa saya tidak memasukkan nomor urut di kolom id, tapi nomor langsu
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
