--- a/public/tech/starship/index.html
+++ b/public/tech/starship/index.html
@@ -2886,6 +2886,11 @@ Berikut langkah-langkahnya:</p>
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2898,12 +2903,10 @@ Berikut langkah-langkahnya:</p>
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
