--- a/public/tech/tableau-basics/index.html
+++ b/public/tech/tableau-basics/index.html
@@ -2400,6 +2400,11 @@ Kita perlu login dulu ke Kaggle untuk bisa mengunduh dataset tersebut.</p></bloc
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2412,12 +2417,10 @@ Kita perlu login dulu ke Kaggle untuk bisa mengunduh dataset tersebut.</p></bloc
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
