--- a/public/tech/tty/index.html
+++ b/public/tech/tty/index.html
@@ -2206,6 +2206,11 @@ Gimana? Keren kan login dengan TTY? Xixixixi</p>
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2218,12 +2223,10 @@ Gimana? Keren kan login dengan TTY? Xixixixi</p>
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
