--- a/public/tech/ufw/index.html
+++ b/public/tech/ufw/index.html
@@ -2754,6 +2754,11 @@ Anywhere (v6) on enp0s3    ALLOW       Anywhere (v6)
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2766,12 +2771,10 @@ Anywhere (v6) on enp0s3    ALLOW       Anywhere (v6)
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
