--- a/public/tech/yt-dlp/index.html
+++ b/public/tech/yt-dlp/index.html
@@ -2254,6 +2254,11 @@ Berikut adalah tautan project <strong><code>ytd-dlp</code></strong> di github:<b
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2266,12 +2271,10 @@ Berikut adalah tautan project <strong><code>ytd-dlp</code></strong> di github:<b
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
