--- a/public/chess/checkmate3/index.html
+++ b/public/chess/checkmate3/index.html
@@ -2626,6 +2626,11 @@
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2638,12 +2643,10 @@
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
