--- a/public/chess/pop-tactics/index.html
+++ b/public/chess/pop-tactics/index.html
@@ -2453,6 +2453,11 @@ Teknik <em><strong>pinning</strong></em> ini hanya dapat dilakukan oleh perwira 
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2465,12 +2470,10 @@ Teknik <em><strong>pinning</strong></em> ini hanya dapat dilakukan oleh perwira 
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
