--- a/public/life/miesedaprawit/index.html
+++ b/public/life/miesedaprawit/index.html
@@ -1939,6 +1939,11 @@ Artikel ulasan ini tidak disponsori siapapun dan tidak dalam rangka mendukung si
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -1951,12 +1956,10 @@ Artikel ulasan ini tidak disponsori siapapun dan tidak dalam rangka mendukung si
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
