--- a/public/tech/archinstall/index.html
+++ b/public/tech/archinstall/index.html
@@ -2378,6 +2378,11 @@ secara default pada <em>script</em> archinstall ini. Jadi, kita akan menginstall
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2390,12 +2395,10 @@ secara default pada <em>script</em> archinstall ini. Jadi, kita akan menginstall
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
