--- a/public/tech/changedns/index.html
+++ b/public/tech/changedns/index.html
@@ -2387,6 +2387,11 @@ Harap digunakan dengan sebaik-baiknya ya! 😊</p>
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2399,12 +2404,10 @@ Harap digunakan dengan sebaik-baiknya ya! 😊</p>
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
