--- a/public/tech/cloudinary/index.html
+++ b/public/tech/cloudinary/index.html
@@ -2466,6 +2466,11 @@ Bagian &ldquo;cloudinary&rdquo; tersebut adalah nama folder yang akan dibuat ole
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2478,12 +2483,10 @@ Bagian &ldquo;cloudinary&rdquo; tersebut adalah nama folder yang akan dibuat ole
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
