--- a/public/tech/eternalblue/index.html
+++ b/public/tech/eternalblue/index.html
@@ -2215,6 +2215,11 @@ Cara menonaktifkan SMBv1 dapat dilakukan dengan mengetikkan perintah berikut di 
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2227,12 +2232,10 @@ Cara menonaktifkan SMBv1 dapat dilakukan dengan mengetikkan perintah berikut di 
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
