--- a/public/tech/exa/index.html
+++ b/public/tech/exa/index.html
@@ -2192,6 +2192,11 @@ Untuk mengaktifkan konfigurasi yang baru saja di-<em>input</em>-kan di <strong><
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2204,12 +2209,10 @@ Untuk mengaktifkan konfigurasi yang baru saja di-<em>input</em>-kan di <strong><
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
