--- a/public/tech/excel1/index.html
+++ b/public/tech/excel1/index.html
@@ -2614,6 +2614,11 @@ Jadi, rumus yang saya gunakan adalah</p>
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2626,12 +2631,10 @@ Jadi, rumus yang saya gunakan adalah</p>
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
