--- a/public/tech/ffmpeg-sr/index.html
+++ b/public/tech/ffmpeg-sr/index.html
@@ -2060,6 +2060,11 @@ baca artikel resmi FFmpeg: <strong>Capturing your Desktop / Screen Recording</st
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2072,12 +2077,10 @@ baca artikel resmi FFmpeg: <strong>Capturing your Desktop / Screen Recording</st
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
