--- a/public/tech/hugo-ing/index.html
+++ b/public/tech/hugo-ing/index.html
@@ -2032,6 +2032,11 @@ theme = &#39;papermod&#39;
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2044,12 +2049,10 @@ theme = &#39;papermod&#39;
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
