--- a/public/tech/ircserver/index.html
+++ b/public/tech/ircserver/index.html
@@ -2361,6 +2361,11 @@ Perlu dicatat beberapa hal berikut:</p>
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2373,12 +2378,10 @@ Perlu dicatat beberapa hal berikut:</p>
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
