--- a/public/tech/joinad/index.html
+++ b/public/tech/joinad/index.html
@@ -2525,6 +2525,11 @@ session optional        pam_mkhomedir.so skel=/etc/skel umask=077
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2537,12 +2542,10 @@ session optional        pam_mkhomedir.so skel=/etc/skel umask=077
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
