--- a/public/tech/kittyconfig/index.html
+++ b/public/tech/kittyconfig/index.html
@@ -2428,6 +2428,11 @@ Kode warna lainnya dapat dijumpai di website berikut: <a href="https://www.ditig
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2440,12 +2445,10 @@ Kode warna lainnya dapat dijumpai di website berikut: <a href="https://www.ditig
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
