--- a/public/tech/mas/index.html
+++ b/public/tech/mas/index.html
@@ -2322,6 +2322,11 @@ Press [2] Ohook for Office activation.</p>
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2334,12 +2339,10 @@ Press [2] Ohook for Office activation.</p>
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
