--- a/public/tech/openbox/index.html
+++ b/public/tech/openbox/index.html
@@ -2599,6 +2599,11 @@ Untuk penjelasan lebih jauh tentang openbox, sila baca-baca <a href="https://en.
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2611,12 +2616,10 @@ Untuk penjelasan lebih jauh tentang openbox, sila baca-baca <a href="https://en.
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
