--- a/public/tech/rdpclient/index.html
+++ b/public/tech/rdpclient/index.html
@@ -2577,6 +2577,11 @@ Kita hanya perlu memilih RDP, kemudian memasukkan <em><strong>username</strong><
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2589,12 +2594,10 @@ Kita hanya perlu memilih RDP, kemudian memasukkan <em><strong>username</strong><
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
