--- a/public/tech/recordmydesktop/index.html
+++ b/public/tech/recordmydesktop/index.html
@@ -2257,6 +2257,11 @@ yaitu mode full layar, sebuah window, dan area tertentu saja&hellip;</p>
     href="https://unpkg.com/@waline/client@v3/dist/waline.css"
   />
 </head>
+
+<script type="text/javascript">
+      document.getElementByClassName("aline-pageview-count")[0].data-path = window.location.pathname;
+</script>
+
 <body>
   
   <div id="waline"></div>
@@ -2269,12 +2274,10 @@ yaitu mode full layar, sebuah window, dan area tertentu saja&hellip;</p>
       serverURL: 'https://comment-waline-zeta.vercel.app',
       reaction: true,
       
-      admin: 'wildan',
       lang: 'en-US',
     });
   </script>
 </body>
-
       </div>
     </div>
     
