fixing summary content @ man.md & blowfish.md

--- a/public/tech/blowfish/index.html
+++ b/public/tech/blowfish/index.html
@@ -11,7 +11,7 @@
   <title>Blowfish: Another Special, Modern, and Feature-Rich Hugo&#39;s Theme &middot; My Awesome Site</title>
   <meta name="title" content="Blowfish: Another Special, Modern, and Feature-Rich Hugo&#39;s Theme &middot; My Awesome Site" />
   
-  <meta name="description" content="This is just a brief explanation on installing and configuring blowfish as Hugo&#39;s theme." />
+  <meta name="description" content="This is just a brief explanation on installing and configuring blowfish as Hugos theme." />
   <meta name="keywords" content="hugo, blowfish, theme, " />
   
   
@@ -70,7 +70,7 @@
   <meta property="og:url" content="http://localhost:1313/tech/blowfish/">
   <meta property="og:site_name" content="My Awesome Site">
   <meta property="og:title" content="Blowfish: Another Special, Modern, and Feature-Rich Hugo&#39;s Theme">
-  <meta property="og:description" content="This is just a brief explanation on installing and configuring blowfish as Hugo’s theme.">
+  <meta property="og:description" content="This is just a brief explanation on installing and configuring blowfish as Hugos theme.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="article:section" content="tech">
@@ -85,7 +85,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/tech/blowfish/featured.png">
   <meta name="twitter:title" content="Blowfish: Another Special, Modern, and Feature-Rich Hugo&#39;s Theme">
-  <meta name="twitter:description" content="This is just a brief explanation on installing and configuring blowfish as Hugo’s theme.">
+  <meta name="twitter:description" content="This is just a brief explanation on installing and configuring blowfish as Hugos theme.">
 
   
   <script type="application/ld+json">
@@ -96,7 +96,7 @@
     "name": "Blowfish: Another Special, Modern, and Feature-Rich Hugo\u0027s Theme",
     "headline": "Blowfish: Another Special, Modern, and Feature-Rich Hugo\u0027s Theme",
     
-    "abstract": "This is just a brief explanation on installing and configuring blowfish as Hugo\u0026rsquo;s theme.",
+    "abstract": "This is just a brief explanation on installing and configuring blowfish as Hugos theme.",
     "inLanguage": "en",
     "url" : "http:\/\/localhost:1313\/tech\/blowfish\/",
     "author" : {
