--- a/public/tech/man/index.html
+++ b/public/tech/man/index.html
@@ -11,7 +11,7 @@
   <title>How to Read `man` Page? &middot; My Awesome Site</title>
   <meta name="title" content="How to Read `man` Page? &middot; My Awesome Site" />
   
-  <meta name="description" content="Have you ever read man page in an effective way? If you haven&#39;t, I&#39;ll show you the art of reading man page, here..." />
+  <meta name="description" content="Have you ever read man page in an effective way? If you have not, I will show you the art of reading man page, here..." />
   <meta name="keywords" content="man, page, tools, linux, cli, " />
   
   
@@ -70,7 +70,7 @@
   <meta property="og:url" content="http://localhost:1313/tech/man/">
   <meta property="og:site_name" content="My Awesome Site">
   <meta property="og:title" content="How to Read `man` Page?">
-  <meta property="og:description" content="Have you ever read man page in an effective way? If you haven’t, I’ll show you the art of reading man page, here…">
+  <meta property="og:description" content="Have you ever read man page in an effective way? If you have not, I will show you the art of reading man page, here…">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="article:section" content="tech">
@@ -87,7 +87,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/tech/man/featured.png">
   <meta name="twitter:title" content="How to Read `man` Page?">
-  <meta name="twitter:description" content="Have you ever read man page in an effective way? If you haven’t, I’ll show you the art of reading man page, here…">
+  <meta name="twitter:description" content="Have you ever read man page in an effective way? If you have not, I will show you the art of reading man page, here…">
 
   
   <script type="application/ld+json">
@@ -98,7 +98,7 @@
     "name": "How to Read \u0060man\u0060 Page?",
     "headline": "How to Read \u0060man\u0060 Page?",
     
-    "abstract": "Have you ever read man page in an effective way? If you haven\u0026rsquo;t, I\u0026rsquo;ll show you the art of reading man page, here\u0026hellip;",
+    "abstract": "Have you ever read man page in an effective way? If you have not, I will show you the art of reading man page, here\u0026hellip;",
     "inLanguage": "en",
     "url" : "http:\/\/localhost:1313\/tech\/man\/",
     "author" : {
