add new content tech/virt-manager.md

--- a/public/tech/cloudinary/index.html
+++ b/public/tech/cloudinary/index.html
@@ -1685,7 +1685,7 @@ Bagian &ldquo;cloudinary&rdquo; tersebut adalah nama folder yang akan dibuat ole
     ><p><strong>Catatan:</strong></p>
 <ol>
 <li>Kita tidak hanya dapat meng-<em>upload</em> file dari komputer kita saja, tetapi juga file yang ada di internet (Google, Google Drive, etc). Kita hanya perlu mengganti bagian <em><strong>upload_file</strong></em>-nya dengan URL yang diinginkan.</li>
-<li>Cloudinary versi gratis ini tidak mengizinkan kita untuk meng-<em>upload</em> banyak file sekaligus, sehingga, kalau kita perlu melakukannya satu persatu jika ingin meng-upload banyak file.</li>
+<li>Cloudinary versi gratis ini tidak mengizinkan kita untuk meng-<em>upload</em> banyak file sekaligus, sehingga, kalau kita perlu melakukannya satu persatu jika ingin meng-<em>upload</em> banyak file.</li>
 </ol></span>
 </div>
 
