--- a/public/tech/scrcpy/index.html
+++ b/public/tech/scrcpy/index.html
@@ -2531,7 +2531,7 @@ Masukkan baris berikut di file konfigurasi (<code>/etc/nixos/configuration.nix</
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >A Comparison of Terminal File Managers</span
+                  >A Comparison of 5 Terminal File Managers</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
