add new content tech/pass.md

--- a/public/tech/virt-manager/index.html
+++ b/public/tech/virt-manager/index.html
@@ -1765,7 +1765,7 @@ Masukkan baris berikut di file konfigurasi (<code>/etc/nixos/configuration.nix</
 <p>Sekian.<br>
 Semoga bermanfaat.</p>
 <hr>
-<p><em>Since I played &ldquo;Virt-manager&rdquo; at the first time, I know this hypervisor has been outrageously captivating</em>&hellip; Saya bahkan bisa menjalankan <a href="https://hypr.land/" target="_blank">hyprland</a> dengan relatif lancar, berbanding jauh dengan Virtualbox &amp; VMWare yang <em>laggy</em> parah..</p>
+<p><em>Since I played &ldquo;Virt-manager&rdquo; at the first time, I knew this hypervisor has been outrageously captivating</em>&hellip; Saya bahkan bisa menjalankan <a href="https://hypr.land/" target="_blank">hyprland</a> dengan relatif lancar, berbanding jauh dengan Virtualbox &amp; VMWare yang <em>laggy</em> parah..</p>
 <p>
     <figure>
       <img class="my-0 rounded-md" loading="lazy" src="/virt-manager/show.png" alt="show" />
