add new content: tech/nixos.md

--- a/public/tech/mpv/index.html
+++ b/public/tech/mpv/index.html
@@ -18,7 +18,7 @@
     <meta name="title" content="MPV: A Free, Open Source, and Cross-platform Media Player. &middot; My Awesome Site">
 
   
-  <meta name="description" content="A tiny but powerful (and super useful ofcource) video (and music) player.">
+  <meta name="description" content="A tiny but powerful (and super useful of course) video (and music) player.">
   <meta name="keywords" content="mpv,video,music,video player,ffmpeg,">
   
   
@@ -101,7 +101,7 @@
   <meta property="og:url" content="http://localhost:1313/tech/mpv/">
   <meta property="og:site_name" content="My Awesome Site">
   <meta property="og:title" content="MPV: A Free, Open Source, and Cross-platform Media Player.">
-  <meta property="og:description" content="A tiny but powerful (and super useful ofcource) video (and music) player.">
+  <meta property="og:description" content="A tiny but powerful (and super useful of course) video (and music) player.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="article:section" content="tech">
@@ -118,7 +118,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/tech/mpv/featured.png">
   <meta name="twitter:title" content="MPV: A Free, Open Source, and Cross-platform Media Player.">
-  <meta name="twitter:description" content="A tiny but powerful (and super useful ofcource) video (and music) player.">
+  <meta name="twitter:description" content="A tiny but powerful (and super useful of course) video (and music) player.">
 <meta name="twitter:image" content="http://localhost:1313/tech/mpv/featured.png">
     <meta property="og:image" content="http://localhost:1313/tech/mpv/featured.png">
   <script type="application/ld+json">
@@ -129,7 +129,7 @@
     "name": "MPV: A Free, Open Source, and Cross-platform Media Player.",
     "headline": "MPV: A Free, Open Source, and Cross-platform Media Player.",
     
-    "abstract": "A tiny but powerful (and super useful ofcource) video (and music) player.",
+    "abstract": "A tiny but powerful (and super useful of course) video (and music) player.",
     "inLanguage": "en",
     "url" : "http:\/\/localhost:1313\/tech\/mpv\/",
     "author" : {
